tests/sksl/errors/ProgramTooLarge_InterfaceBlock.glsl
### Compilation failed:

error: array size is too large
error: 1: interface block type is not valid
MyInterfaceBlock {
^^^^^^^^^^^^^^^^
2 errors
